src/rust/dcmfx_cli/tests/snapshots/modify__explicit_vr_little_endian_ybr_to_jpeg_xl_lossless_before.snap
---
source: dcmfx_cli/tests/modify.rs
expression: get_stdout(assert)
snapshot_kind: text
---
(0002,0001) OB File Meta Information Version        [     2 bytes] [00 01]
(0002,0002) UI Media Storage SOP Class UID          [    26 bytes] "1.2.840 … (Secondary Capture Image Storage)
(0002,0003) UI Media Storage SOP Instance UID       [    54 bytes] "1.2.276.0. …
(0002,0010) UI Transfer Syntax UID                  [    20 bytes] "1.2.840 … (Explicit VR Little Endian)
(0002,0012) UI Implementation Class UID             [    28 bytes] "1.2.276.0. …
(0002,0013) SH Implementation Version Name          [    16 bytes] "OFFIS_DCMT …
(0002,0016) AE Source Application Entity Title      [     8 bytes] "gdcmconv"
(0008,0005) CS Specific Character Set               [    10 bytes] "ISO_IR 192"
(0008,0008) CS Image Type                           [    24 bytes] "DERIVED",  …
(0008,0016) UI SOP Class UID                        [    26 bytes] "1.2.840 … (Secondary Capture Image Storage)
(0008,0018) UI SOP Instance UID                     [    54 bytes] "1.2.276.0. …
(0008,0020) DA Study Date                           [     8 bytes] 2017-01-01
(0008,0023) DA Content Date                         [     0 bytes] ""
(0008,002A) DT Acquisition DateTime                 [     0 bytes] ""
(0008,0030) TM Study Time                           [     6 bytes] 12:00:00
(0008,0033) TM Content Time                         [     0 bytes] ""
(0008,0050) SH Accession Number                     [     0 bytes] ""
(0008,0060) CS Modality                             [     2 bytes] "OT" (Other)
(0008,0064) CS Conversion Type                      [     4 bytes] "SYN" (Synthetic Image)
(0008,0090) PN Referring Physician's Name           [    14 bytes] "Moriarty^J …
(0008,2111) ST Derivation Description               [    86 bytes] "Lossy comp …
(0008,2112) SQ Source Image Sequence
  (FFFE,E000) Item
    (0008,1150) UI Referenced SOP Class UID             [    26 bytes] "1.2.840 … (Secondary Capture Image Storage)
    (0008,1155) UI Referenced SOP Instance UID          [    64 bytes] "1.2.826 …
    (0040,A170) SQ Purpose of Reference Code Sequence
      (FFFE,E000) Item
        (0008,0100) SH Code Value                           [     6 bytes] "121320"
        (0008,0102) SH Coding Scheme Designator             [     4 bytes] "DCM"
        (0008,0104) LO Code Meaning                         [    24 bytes] "Uncompr …
      (FFFE,E00D) Item Delimitation Item
    (FFFE,E0DD) Sequence Delimitation Item
  (FFFE,E00D) Item Delimitation Item
(FFFE,E0DD) Sequence Delimitation Item
(0008,9215) SQ Derivation Code Sequence
  (FFFE,E000) Item
    (0008,0100) SH Code Value                           [     6 bytes] "113040"
    (0008,0102) SH Coding Scheme Designator             [     4 bytes] "DCM"
    (0008,0104) LO Code Meaning                         [    18 bytes] "Lossy C …
  (FFFE,E00D) Item Delimitation Item
(FFFE,E0DD) Sequence Delimitation Item
(0010,0010) PN Patient's Name                       [    10 bytes] "Lestrade^G"
(0010,0020) LO Patient ID                           [     4 bytes] "ID1"
(0010,0030) DA Patient's Birth Date                 [     0 bytes] ""
(0010,0040) CS Patient's Sex                        [     2 bytes] "F" (Female)
(0010,1010) AS Patient's Age                        [     4 bytes] 24 years
(0018,5100) CS Patient Position                     [     0 bytes] ""
(0020,000D) UI Study Instance UID                   [    64 bytes] "1.2.826.0. …
(0020,000E) UI Series Instance UID                  [    64 bytes] "1.2.826.0. …
(0020,0010) SH Study ID                             [     2 bytes] "1"
(0020,0011) IS Series Number                        [     2 bytes] "1"
(0020,0013) IS Instance Number                      [     2 bytes] "1"
(0020,0020) CS Patient Orientation                  [     0 bytes] ""
(0020,0060) CS Laterality                           [     0 bytes] ""
(0020,4000) LT Image Comments                       [   268 bytes] "Test Image …
(0028,0002) US Samples per Pixel                    [     2 bytes] 3
(0028,0004) CS Photometric Interpretation           [    12 bytes] "YBR_FULL_4 …
(0028,0006) US Planar Configuration                 [     2 bytes] 0
(0028,0010) US Rows                                 [     2 bytes] 100
(0028,0011) US Columns                              [     2 bytes] 100
(0028,0030) DS Pixel Spacing                        [     8 bytes] "1.0", "1.0"
(0028,0100) US Bits Allocated                       [     2 bytes] 8
(0028,0101) US Bits Stored                          [     2 bytes] 8
(0028,0102) US High Bit                             [     2 bytes] 7
(0028,0103) US Pixel Representation                 [     2 bytes] 0
(0028,2110) CS Lossy Image Compression              [     2 bytes] "01" (Image has been subjected to lossy compression)
(0028,2112) DS Lossy Image Compression Ratio        [     6 bytes] "21.521"
(0028,2114) CS Lossy Image Compression Method       [    12 bytes] "ISO_109 … (JPEG Lossy Compression [ISO/IEC 10918-1])
(7FE0,0010) OB Pixel Data                           [ 20000 bytes] [4C 4C 55 F …
